--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   
-  # Firebase & Auth
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
+  # Auth (Firebase disabled for now - version conflict)
+  # firebase_core: ^3.8.1
+  # firebase_auth: ^5.5.1
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^5.0.0
   
@@ -75,14 +75,3 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
-    
-  fonts:
-    - family: Nunito
-      fonts:
-        - asset: assets/fonts/Nunito-Regular.ttf
-        - asset: assets/fonts/Nunito-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Nunito-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Nunito-Light.ttf
-          weight: 300
