--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,14 +26,16 @@ dependencies:
   # Navigation
   go_router: ^12.1.3
   
-  # Storage
+  # Storage - Local & Secure
   shared_preferences: ^2.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_secure_storage: ^9.0.0
   
-  # Auth (Firebase disabled for now - version conflict)
-  # firebase_core: ^3.8.1
-  # firebase_auth: ^5.5.1
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.3
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^5.0.0
   
@@ -46,10 +48,10 @@ dependencies:
   pedometer: ^4.0.1
   health: ^8.1.0
   
-  # Spotify
-  spotify_sdk: ^2.3.0
+  # Spotify OAuth
   flutter_web_auth_2: ^3.1.1
   http: ^1.1.2
+  crypto: ^3.0.3
   
   # Utilities
   intl: ^0.18.1
@@ -57,6 +59,7 @@ dependencies:
   flutter_animate: ^4.3.0
   url_launcher: ^6.2.2
   permission_handler: ^11.1.0
+  connectivity_plus: ^5.0.2
   
   # Charts
   fl_chart: ^0.65.0
