UI design Improved

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   url_launcher: ^6.2.2
   permission_handler: ^11.1.0
   connectivity_plus: ^5.0.2
+  app_links: ^6.0.0
   
   # Charts
   fl_chart: ^0.65.0
