--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,18 @@
 .swiftpm/
 migrate_working_dir/
 
+# Environment & Secrets - NEVER COMMIT THESE
+.env
+.env.local
+.env.development
+.env.production
+*.env
+android/secrets.properties
+android/local.properties
+ios/Flutter/GeneratedPluginRegistrant.*
+*.xcconfig
+!*.example
+
 # IntelliJ related
 *.iml
 *.ipr
