--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   http: ^1.1.2
   crypto: ^3.0.3
   
+  # Environment Variables
+  flutter_dotenv: ^5.1.0
+  
   # Utilities
   intl: ^0.18.1
   uuid: ^4.2.2
@@ -71,11 +74,36 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.8
+
+# Flutter Launcher Icons configuration
+flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/logo_foreground.png"
+  min_sdk_android: 21
+  web:
+    generate: false
+
+# Flutter Native Splash configuration  
+flutter_native_splash:
+  color: "#0A0F0F"
+  image: "assets/images/splash_logo.png"
+  android_12:
+    color: "#0A0F0F"
+    image: "assets/images/splash_logo.png"
+  android: true
+  ios: false
+  web: false
 
 flutter:
   uses-material-design: true
   
   assets:
+    - .env
     - assets/images/
     - assets/icons/
     - assets/animations/
